--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ install:
   - pip install tox-travis
   - travis_retry bash ./scripts/get_cpachecker.sh
   - travis_retry python ./scripts/get_z3.py ./cpachecker/scripts/
+
+script:
   - ./cpachecker/scripts/cpa.sh -predicateAnalysis-linear ./examples/noisymax_t.c -preprocess -setprop solver.solver=smtinterpol
   - ./cpachecker/scripts/cpa.sh -predicateAnalysis ./examples/noisymax_t.c -preprocess -setprop solver.solver=z3 || true
 
