Add more commands to test.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,10 @@ install:
   - travis_retry python ./scripts/get_z3.py ./cpachecker/scripts/
 
 script:
-  - ./cpachecker/scripts/cpa.sh -predicateAnalysis ./examples/noisymax_t.c -preprocess
   - ./cpachecker/scripts/cpa.sh -predicateAnalysis-linear ./examples/noisymax_t.c -preprocess -setprop solver.solver=smtinterpol
+  - ./cpachecker/scripts/cpa.sh -predicateAnalysis-linear ./examples/noisymax_t.c -preprocess
   - ./cpachecker/scripts/cpa.sh -predicateAnalysis ./examples/noisymax_t.c -preprocess -setprop solver.solver=z3 || true
-
+  - ./cpachecker/scripts/cpa.sh -predicateAnalysis ./examples/noisymax_t.c -preprocess
+  
 notifications:
   email: false
