--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ python:
 cache: pip
 
 install:
+  - java -version
+  - javac -version
   - pip install tox-travis
   - travis_retry bash ./scripts/get_cpachecker.sh
   - travis_retry python ./scripts/get_z3.py ./cpachecker/scripts/
@@ -17,6 +19,6 @@ script:
   - ./cpachecker/scripts/cpa.sh -predicateAnalysis-linear ./examples/noisymax_t.c -preprocess
   - ./cpachecker/scripts/cpa.sh -predicateAnalysis ./examples/noisymax_t.c -preprocess -setprop solver.solver=z3 || true
   - ./cpachecker/scripts/cpa.sh -predicateAnalysis ./examples/noisymax_t.c -preprocess
-  
+
 notifications:
   email: false
