--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,11 @@ script:
   - ./cpachecker/scripts/cpa.sh -predicateAnalysis-linear ./examples/noisymax_t.c -preprocess -setprop solver.solver=z3
   - ./cpachecker/scripts/cpa.sh -predicateAnalysis ./examples/noisymax_t.c -preprocess -setprop solver.solver=z3
   - ./cpachecker/scripts/cpa.sh -predicateAnalysis ./examples/noisymax_t.c -preprocess
-  - ./cpachecker/scripts/cpa.sh -valueAnalysis ./examples/noisymax_t.c -preprocess
+  - ./cpachecker/scripts/cpa.sh -predicateAnalysis-linear ./examples/sparsevector_t.c -preprocess
+  - ./cpachecker/scripts/cpa.sh -predicateAnalysis-linear ./examples/sparsevector_t.c -preprocess -setprop solver.solver=smtinterpol
+  - ./cpachecker/scripts/cpa.sh -predicateAnalysis-linear ./examples/sparsevector_t.c -preprocess -setprop solver.solver=z3
+  - ./cpachecker/scripts/cpa.sh -predicateAnalysis ./examples/sparsevector_t.c -preprocess -setprop solver.solver=z3
+  - ./cpachecker/scripts/cpa.sh -predicateAnalysis ./examples/sparsevector_t.c -preprocess
 
 notifications:
   email: false
