--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
   - pip install tox-travis
   - travis_retry bash ./scripts/get_cpachecker.sh
   - travis_retry python ./scripts/get_z3.py ./cpachecker/scripts/
+  - python setup.py install
 
 script:
   - travis_wait 60 python ./scripts/check.py ./examples
