Check cannot fail.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install:
 script:
   - tox
   - python -m lang ./examples/noisymax.c
-  - python ./scripts/check.py ./examples || true
+  - python ./scripts/check.py ./examples
 
 notifications:
   email: false
