--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
 
 script:
   - tox
-  - python -m lang ./examples/noisymax.c
+  - python -m shadowdp ./examples/noisymax.c
   - python ./scripts/check.py ./examples
 
 notifications:
