Fix codecov config.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,2 @@
 [tool:pytest]
-addopts = -v -x --doctest-modules --ignore=setup.py --cov=lang
+addopts = -v -x --doctest-modules --ignore=setup.py --cov=shadowdp
