Use bundled version.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - javac -version
   - pip install tox-travis
   - travis_retry bash ./scripts/get_cpachecker.sh
-  - travis_retry python ./scripts/get_z3.py ./cpachecker/scripts/
+  #- travis_retry python ./scripts/get_z3.py ./cpachecker/scripts/
   - python setup.py install
   - pip install tox-travis
 
