--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,6 @@ script:
   - javac -version
   - tox
   - python ./scripts/check.py ./examples/transformed
-  - docker build . -t cmlapsu/shadowdp
 
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
@@ -32,6 +31,16 @@ after_success:
       docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD;
       docker push cmlapsu/shadowdp:latest;
     fi
+
+jobs:
+  include:
+    - stage: deploy
+      script:
+        - if [ "$TRAVIS_BRANCH" == "master" ]; then
+            docker build . -t cmlapsu/shadowdp
+            docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD;
+            docker push cmlapsu/shadowdp:latest;
+        fi
 
 notifications:
   email: false
