--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ jobs:
       if: branch = master
       script:
         - docker build . -t cmlapsu/shadowdp
+        - docker run -it cmlapsu/shadowdp bash /shadowdp/scripts/benchmark.sh
         - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
         - docker push cmlapsu/shadowdp:latest
 
