--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ jobs:
       script:
         - docker build . -t cmlapsu/shadowdp
         - docker run -it cmlapsu/shadowdp bash /shadowdp/scripts/benchmark.sh
-        - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+        - echo "$DOCKER_PASSWORD" | docker login -u $DOCKER_USERNAME --password-stdin
         - docker push cmlapsu/shadowdp:latest
 
 notifications:
