--- a/.gitignore
+++ b/.gitignore
@@ -1,50 +1,42 @@
-# Compiled python files
+# compiled python files
 *.pyc
 
 # macOS generated files
 .DS_STORE
 
-# Temporary and log files
+# temporary and log files
 *.tmp
 *.log
 
-# Coverage generated files
+# coverage generated files
 .coverage
 
-# Ply generated files
+# ply generated files
 parser.out
 parsetab.py
 
-# JetBrains generated files
+# jetBrains generated files
 .idea/
 
-# Build files
+# build files
 .cache/
 build/
 dist/
 *.egg-info/
 
-# Tox generated files
+# tox generated files
 .tox/
 
-# Python cache
+# python cache
 _pycache_/
 
 # Z3 library release files
 z3/
 
-# Output figure
+# output figure
 *.pdf
 
-# Test run file
-run.py
-
-# Result data file
-result_*.json
-debug.txt
-runo.py
-
-# Coverage reports
+# coverage reports
 .coverage.*
 
 # pytest cache
