Set name and email for git.

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,8 @@ jobs:
             # push to github cmlapsu/shadowdp
             rm -rf .git
             git init
+            git config user.name "Ryan Wang"
+            git config user.email "ryanwang.cs@gmail.com"
             git add .
             git commit -m "Release of ShadowDP."
             git remote add origin https://ryanwanggit:$GITHUB_TOKEN@github.com/cmla-psu/shadowdp.git
